# drifting-model

./: .gitignore  DEVLOG.md  README.md  __init__.py  drifting.py  eval.py  feature_encoder.py  learned_field.py  pyproject.toml  requirements.txt  sample.py  train.py  utils.py
configs/: cifar10-ldf-no-proj.yaml  cifar10-ldf-setsize-large.yaml  cifar10-ldf-setsize-small.yaml  cifar10-ldf.yaml  cifar10-short-no-encoder.yaml  cifar10-short.yaml  cifar10.yaml  mnist.yaml
eval_cifar10-short/: fid_metrics.csv
scripts/: run_cifar10_short_no_encoder.sh  run_ldf_verification.sh
tests/: test_learned_field.py
