[project]
name = "drifting-model"
version = "0.1.0"
description = "Drifting model training for MNIST/CIFAR-10."
requires-python = ">=3.11"
dependencies = [
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
    "einops==0.8.2",
    "wandb",
    "PyYAML",
    "clean-fid",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
